@@ -1,3 +1,7 @@
+2018-01-18    <cerebrum@cleomedes.uit.no>
+    
+    * maillog.py: Added to repo.
+
 2018-01-17  Karen   <cerebrum@cleomedes.uit.no>
 
     * import_tlf.py: Made changes to import_tlf.py so that it only updates telephone 
